--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Fiksasi Perulangan Kata</string>
     <string name="tab_text_1">Input</string>
     <string name="tab_text_2">Riwayat</string>
+    <string name="firman">Firman</string>
 </resources>
